force-app/main/default/objects/Qantas_API__c/Qantas_API__c.object-meta.xml
<CustomObject>
    <description>QCC: Store the endpoint, customer key and secret. 
  -- Loyalty
  -- CAP</description>
    <label>Qantas API</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Qantas API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qantas API</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>