force-app/main/default/objects/Qantas_API__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Stores the ClientId of the system to be integrated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>