force-app/main/default/objects/Qantas_API__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Stores the Client Secret of the System to be integrated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>