force-app/main/default/objects/Qantas_API__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>Allows to set the Endpoint of the system to be integrated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>