force-app/main/default/objects/Qantas_API__c/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <description>Stores the Grant Type of the system to be integarted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GrantType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>