force-app/main/default/objects/Qantas_API__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Sets the method for the system to be integrated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>