force-app/main/default/objects/Qantas_API__c/fields/QCC_Extended_Scope__c.field-meta.xml
<CustomField>
    <fullName>QCC_Extended_Scope__c</fullName>
    <description>This field holds the extended scope that the original Scope field cannot handle.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the extended scope that the original Scope field cannot handle.</inlineHelpText>
    <label>Extended Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>