force-app/main/default/objects/Qantas_API__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>QCC: Scope to be used when generating the access token</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>