force-app/main/default/objects/Qantas_API__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>CRM-7281: Stores the Token of the system to be integarted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>