force-app/main/default/objects/Qantas_API__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EndPoint__c</columns>
    <columns>Token__c</columns>
    <columns>ClientId__c</columns>
    <columns>ClientSecret__c</columns>
    <columns>GrantType__c</columns>
    <columns>Method__c</columns>
    <columns>Scope__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>